tests/invalid/List_Invalid_5.whiley
import * from whiley.lang.*

function f() -> [int]:
    return 1
